test/sema/typeck/var/wrong-type-params-primitive.dora
fn f() { let a: Int32[Bool, Char] = 10; }
